# arraygen

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
example/: .gitignore  Cargo.toml
example/src/: main.rs
src/: casting.rs  decl_fn_parsing.rs  field_selector_parsing.rs  lib.rs  parse_attribute.rs  parse_common.rs  parse_decorator.rs  parse_derive_arraygen.rs  parse_gen_array.rs  parse_in_array.rs  transform_context.rs  types.rs  utils.rs
tests/: arraygen.rs  arraygen_main_tests.rs  casting_tests.rs  compiletests.rs  implicit_select_all_tests.rs  trait_objects_tests.rs
tests/compile-fail/: declaration-missing-fn.rs  declaration-wrong-type.rs  derive-on-non-struct.rs  derive-on-struct-non-braced.rs  implicit-select-all-conflicting-wildcards.rs  implicit-select-all-duplicated-fields.rs  implicit-select-all-duplicated-types.rs  implicit-select-all-duplicated-wildcards.rs  implicit-select-all-on-gen-array-with-override-implicit.rs  inclusion-bad-tokens.rs  inclusion-decorator-empty.rs  inclusion-decorator-wrong-kind.rs  inclusion-decorator-wrong-method.rs  inclusion-decorator-wrong-place.rs  inclusion-duplicated-method-for-field.rs  inclusion-method-not-declared.rs  inclusion-wrong-syntax.rs
tests/compile-warning/: derive-alone-test.rs  empty-method.rs
