[package]
name = "arraygen"
version = "0.1.14"
authors = ["José Manuel Barroso Galindo <theypsilon@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Derive macro for generating arrays from struct fields."
readme = "README.md"
documentation = "https://docs.rs/arraygen"

homepage = "https://github.com/theypsilon/arraygen"
repository = "https://github.com/theypsilon/arraygen"
keywords = ["array", "struct", "derive", "field", "iter"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.21"
proc-macro-error = "1.0"
syn = "1.0.40"

[dev-dependencies]
compiletest_rs = "0.5.0"
