[package]
name = "arraygen"
version = "0.3.0-RC1"
authors = ["José Manuel Barroso Galindo <theypsilon@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Derive macro for generating arrays from struct fields."
readme = "README.md"
documentation = "https://docs.rs/arraygen"

homepage = "https://github.com/theypsilon/arraygen"
repository = "https://github.com/theypsilon/arraygen"
keywords = ["array", "struct", "derive", "field", "iter"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.26"
syn = { version = "1.0.72", features = ["extra-traits"] }

[dev-dependencies]
compiletest_rs = "0.7.0"
